Fixed some errors in the function that adjusts the gap between section 2 and 3 (home page)

--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,7 @@ p, button {
 
 
 #section-3-home {
-    background-color: blue;
+    background-color: orange;
     height: 1500px;
 
 
